<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swipeRefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewWallpapers"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="7"/>

        <com.amazon.device.ads.AdLayout
            android:id="@+id/adLayout"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"/>

    </LinearLayout>

</android.support.v4.widget.SwipeRefreshLayout>