<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.twismart.wallpapershd.ui.wallpaper.WallpaperDetailActivity">

    <FrameLayout
        android:id="@+id/frameWrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

    <ImageView
        android:id="@+id/imageWallpaper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@null"/>

        <ImageView
            android:id="@+id/imageSwitchFavorite"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="bottom|end"
            android:src="@drawable/ic_favorite"
            android:tint="#ffffff"
            android:contentDescription="@null"/>

        <View
            android:id="@+id/indicator"
            android:layout_width="50dp"
            android:layout_height="5dp"
            android:background="@color/colorPrimary"
            android:visibility="gone"
            android:layout_gravity="top|start"/>
    </FrameLayout>

</android.support.design.widget.CoordinatorLayout>